# political-test

./: Culture_War_Companies_160_fullmeta.csv  ETL.py  LICENSE  Model.py  README.md  REFACTORING_GUIDE.md  clean.py  daily_update.py  data_loader_v2.py  database.py  database_v2.py  main.py  model_state.json  notifications.py  pyproject.toml  requirements.txt  setup_scheduler.sh  streamlit_app.py  visualizations.py  vix_data_2000_2025.csv
.streamlit/: config.toml
briefings/: briefing_2026-01-22.json  briefing_2026-01-22.txt  briefing_2026-01-23.json  briefing_2026-01-23.txt  briefing_2026-01-24.json  briefing_2026-01-24.txt  briefing_2026-01-25.json  briefing_2026-01-25.txt  briefing_2026-01-26.json  briefing_2026-01-26.txt  briefing_2026-01-27.json  briefing_2026-01-27.txt  briefing_2026-01-28.json  briefing_2026-01-28.txt  briefing_2026-01-29.json  briefing_2026-01-29.txt  briefing_2026-01-30.json  briefing_2026-01-30.txt  briefing_2026-01-31.json  briefing_2026-01-31.txt  briefing_2026-02-01.json  briefing_2026-02-01.txt  briefing_2026-02-02.json  briefing_2026-02-02.txt  briefing_2026-02-03.json  briefing_2026-02-03.txt  briefing_2026-02-04.json  briefing_2026-02-04.txt  briefing_2026-02-05.json  briefing_2026-02-05.txt  briefing_2026-02-06.json  briefing_2026-02-06.txt  briefing_2026-02-07.json  briefing_2026-02-07.txt  briefing_2026-02-08.json  briefing_2026-02-08.txt  briefing_2026-02-09.json  briefing_2026-02-09.txt  briefing_2026-02-10.json  briefing_2026-02-10.txt  (+22 more)
config/: race_config.py
data/: extraction_metadata.json
fama_french_data/: FF3_daily_2000-01-01_to_2026-01-18.csv  FF5_daily_2000-01-01_to_2026-01-18.csv  MOM_daily_2000-01-01_to_2026-01-18.csv
models/: hierarchical_model.py
notifications/: notification_20260122_123628.json  notification_20260206_120003.json  notification_history.jsonl  (+6 more)
(+32 files in other folders)
