[project]
name = "signalsandsystems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fredapi>=0.5.2",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "praw>=7.8.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sec-edgar-downloader>=5.0.3",
    "yfinance>=0.2.66",
    "streamlit>=1.29.0",
    "plotly>=5.15.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "fpdf2>=2.7.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
]
